--- a/Project_2/style.css
+++ b/Project_2/style.css
@@ -21,7 +21,45 @@
     transform: translateY(-200px);
     font-size: 105px;
 
+    
+
 }
+
+
+
+/* .typewriter h1 {
+  text-align:center;
+color: #FFD9E0;
+  font-family: "bilo";
+font-weight: 700;
+font-size:60px;
+font-style: italic;
+color:#FFD9E0;
+overflow: hidden; 
+
+border-right: .15em #FFD9E0; 
+
+white-space: nowrap; 
+
+margin: 0 auto; 
+
+letter-spacing: .15em; 
+
+animation: 
+  typing 3.5s steps(50, end),
+  blink-caret .5s step-end infinite;
+}
+
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: pink }
+} */
 
 .frontpage {
     display: flex;
@@ -34,17 +72,38 @@
    
 }
 .frontpage p {
-    /* font-family: "miller-text", serif;
-    font-weight: 400; */
-    font-family: arial;
-   
-    position: absolute;
-    max-width: 40%;
-    color: white;
-    font-size: 28px;
-    transform: translateY(150px);
-    text-align: justify;
-    top: 200px;
+
+      font-family: monospace;
+      color: white;
+      font-size: 28px;
+      text-align: justify;
+      max-width: 40%;
+      position: absolute;
+      top: 300px;
+      overflow: hidden;
+      white-space: pre-wrap;
+
+     
+      
+      
+      margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+      /* letter-spacing: .15em; Adjust as needed */
+      animation: 
+        typing 3.5s steps(100, end),
+        blink-caret .5s step-end infinite;
+
+}
+
+/* The typing effect */
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: pink }
 }
 
  .data-container {
@@ -96,8 +155,14 @@
     text-align: right;
     top: 40px;
     z-index: 3;
+   
+}
 
-
+.name:hover {
+  color: #6b8a73
+}
+a{
+  text-decoration: none;
 }
 
 .name::after {
@@ -114,7 +179,7 @@ p {
     margin: 0;
     font-size: 22px;
     text-align: left;
-    font-family: arial;
+    font-family: monospace;
     position: relative;
     
     /* top: -35px; */
@@ -192,8 +257,9 @@ p {
     }
   
     .frontpage p {
-      font-size: 17px;
+      font-size: 14px;
       max-width: 50%;
+      top: 400px;
      
     
     }
